@@ -661,6 +661,13 @@ which takes care of the scattering of channel selection bits.
 So an ADC library can always address the variable ADCONx_CHS as multibit
 'binary' field, regardless if the bits are scattered over the register or not.
 
+<p>A similar situation exists for the ADCS bits of ADCONx of some PICs.
+For PICs which have their ADCS bits scattered over ADCON0 and ADCON1 a
+pseudo-variable ADCON0_ADCS is added which takes care of setting the
+proper bits.
+In this way an ADC library can always address the variable ADCONx_CHS as
+single multibit field, regardless if the bits are scattered over registers
+or not (and regardless if it is a bit*2 or a bit*3 variable).
 
 <h3><a name="EUSARTregs">Names of registers and subfields of [E]USART modules</a></h3>
 <p>PICs can have zero, one or two USART modules, of which zero, one or both
